# A-maze-ing_42Lisboa

./: .flake8  .gitignore  42.logo  Makefile  README.md  RENDER.md  RENDER_PSEUDOCODE.md  TODO.md  a_maze_ing.py  config.py  config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  render.py  requirements.txt  solver.py  test_maze.txt  writer.py
mazegen/: README.md  __init__.py  cell.py  maze.py
