[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "DFS-based maze generator with perfect and imperfect maze support"
authors = [
    {name = "esnavarr, mju-ferr"}
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
